static/css/hero.css
.hero {
  background: url("/static/images/topBG.jpg") center no-repeat;
  background-size: cover;
}

.navbar {
  margin-right: -15px;
  margin-left: -15px;
}

.nav-link {
  font-weight: 600;
  font-size: 11px;
}

.navbar-nav {
  position: absolute;
  right: 0;
}

#header {
  font-size: 70px;
  color: #FFF;
  font-weight: 600;
  text-align: left;
  margin-top: 15%;
  width: 735px;
  height: 80px;
}

#header-subscript {
  margin-top: 20px;
  font-weight: 300;
  max-width: 600px;
  color: #eeeeee;
}

#headline-sponsor {
  /* margin-top: -40px; */
  font-weight: 600;
  max-width: 600px;
  color: #eeeeee;
}

#headline-sponsor-logo {
  position: relative;
  left: -105px;
}

#timer {
  position: absolute;
  top: 75%;
  left: 21%;
  background-color: #FFF;
  width: 60%;
  height: 230px;
  border-radius: 5px;
  -webkit-box-shadow: 0px 0px 62px 0px rgba(0, 0, 0, 0.15);
  -moz-box-shadow: 0px 0px 62px 0px rgba(0, 0, 0, 0.15);
  box-shadow: 0px 0px 62px 0px rgba(0, 0, 0, 0.15);
  margin-bottom: 50px;
  font-weight: 600;
  padding: 40px;
}

#date-info {
  font-size: 25px;
}

#venue-info {
  font-size: 15px;
  margin-top: -10px;
}

.timer-number, .number-subscript {
  text-align: center;
}

.timer-number {
  font-size: 60px;
}

.number-subscript {
  margin-top: -15px;
  font-size: 13px
}

.nav-item {
  cursor: pointer;
}

#apply-button {
  position: relative;
  top: 20px;
}

@media screen and (max-width: 1440px) {
  #date-info {
    font-size: 23px;
  }
  #timer {
    padding: 30px;
  }
}

@media screen and (max-width: 1024px) {
  #timer {
    padding: 20px;
  }
}

@media screen and (max-width: 991px) {
  #header {
    font-size: 50px;
  }
  #header-subscript {
    margin-top: 0;
  }
}

@media screen and (max-width: 884px) {
  #timer {
    padding: 10px;
  }
  #date-info {
    font-size: 22px;
  }
}

@media screen and (max-width: 767px) {
  html, body, #body, #container {
    background: #fff;
  }
  #date-info, #venue-info {
    text-align: center;
  }
  .navbar-nav {
    margin: 0 !important;
    background: #fff !important;
  }
  .navbar {
    position: absolute;
    padding: 0;
    width: 100%;
  }
  .nav-item {
    background: #fff !important;
    padding: 10px;
  }
  .nav-item>a {
    color: #3c2b5f !important;
  }
  #header {
    margin-top: 40%;
    font-size: 45px;
  }
  #apply-button {
    margin-bottom: 20px;
  }
}

@media screen and (max-width: 559px) {
  #header {
    font-size: 35px;
  }
}

@media screen and (max-width: 450px) {
  #header {
    font-size: 30px;
    margin-top: 50%;
  }
  #header-subscript {
    margin-top: -30px;
  }
  .timer-number {
    font-size: 40px;
  }
  .number-subscript {
    font-size: 10px
  }
  #timer {
    width: 100%;
    left: 0;
  }
  #headline-sponsor-logo {
    left: 0;
  }
}

@media screen and (max-width: 375px) {
  #header {
    font-size: 25px;
  }
}

